--- a/css/Bai1.css
+++ b/css/Bai1.css
@@ -1,19 +1,21 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .container{
     display: flex;
     flex-wrap: wrap;
-    gap: 5px;
+    width: 90%;
+    margin: 0 auto;
 }
 
 .card{
     width: 100px;
-    flex-basis: 20%;
+    padding: 5px;
+    flex-basis: 25%;
     border-radius: 5px;
-    border: 0.2px solid gray;
 }
 
 .card img{
@@ -57,4 +59,16 @@
     text-decoration: none;
     padding: 10px;
     border-radius: 3px;
+}
+
+@media screen and (max-width: 768px) {
+    .card{
+        flex-basis: 33.33333333%;
+    }    
+}
+
+@media screen and (max-width: 425px) {
+    .card{
+        flex-basis: 50%;
+    }
 }
